--- a/src/Ulb/Clbase/BrowseBundle/Resources/config/routing.yml
+++ b/src/Ulb/Clbase/BrowseBundle/Resources/config/routing.yml
@@ -1,6 +1,9 @@
 ulb_clbase_browse_homepage:
     pattern:  /hello/{name}
     defaults: { _controller: UlbClbaseBrowseBundle:Default:index, name:'Serge' }
+_ulybkino:
+    pattern:  /Ulybkino
+    defaults: { _controller: UlbClbaseBrowseBundle:Default:gotoUlybkino }
 
 info:
     resource: "@UlbClbaseBrowseBundle/Controller/CustomerController.php"
